html its almost ready- footer later

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -3,6 +3,8 @@
     height: 4.1rem;
     font-size: 1.3rem;
     font-weight: bold;
+    border: none;
+    border-radius: 2.9rem;
     @media screen and (min-width:$Query-Tablet) {
         width: 28.2rem;
         height: 5.7rem;
