--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,3 +54,39 @@ ul {
 a {
   text-decoration: none;
 }
+
+.button {
+  width: 24.2rem;
+  height: 4.1rem;
+  font-size: 1.3rem;
+  font-weight: bold;
+  border: none;
+  border-radius: 2.9rem;
+}
+@media screen and (min-width: 700px) {
+  .button {
+    width: 28.2rem;
+    height: 5.7rem;
+    font-size: 1.5rem;
+  }
+}
+
+.button-main {
+  background-color: #ff52bf;
+  color: white;
+}
+
+.button-alt {
+  width: 9.8rem;
+  height: 2.7rem;
+  font-size: 1rem;
+  background-color: #ffffff;
+  color: #00252e;
+}
+@media screen and (min-width: 700px) {
+  .button-alt {
+    width: 2.3rem;
+    height: 4.9rem;
+    font-size: 1.5rem;
+  }
+}
