--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,8 @@
 @import 'globals';
 @import 'mixins';
 
+//  Elements
+@import './components/header';
+@import './components/buttons';
+@import './components/footer';
 
