--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -5,6 +5,7 @@
     font-weight: bold;
     border: none;
     border-radius: 2.9rem;
+
     @media screen and (min-width:$Query-Tablet) {
         width: 28.2rem;
         height: 5.7rem;
@@ -12,12 +13,12 @@
     }
 }
 
-.button-main {
+.button--main {
     background-color: $Pink;
     color: white;
 }
 
-.button-alt {
+.button--alt {
     width: 9.8rem;
     height: 2.7rem;
     font-size: 1rem;
