--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,8 @@ a {
 
 img {
   width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .header {
@@ -264,5 +266,101 @@ img {
 @media screen and (min-width: 1240px) {
   .hero__media {
     margin-block-start: 0rem;
+  }
+}
+
+.section__card-container {
+  width: 100%;
+  max-width: 50rem;
+  margin: 0 auto;
+  padding: 0 2rem;
+  text-align: center;
+  min-width: 33.4rem;
+  padding-block: 3.7rem 12rem;
+}
+@media screen and (min-width: 650px) {
+  .section__card-container {
+    max-width: 1308px;
+  }
+}
+@media screen and (min-width: 1240px) {
+  .section__card-container {
+    text-align: left;
+  }
+}
+@media screen and (min-width: 1240px) {
+  .section__card-container {
+    padding-block: 12rem;
+  }
+}
+.section__card-container .section__card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  max-height: 49.1rem;
+  margin: 1.9rem auto;
+  padding: 4rem;
+  border-radius: 1.4rem;
+  box-shadow: 0px 0px 12px #e4e4e4;
+}
+@media screen and (min-width: 650px) {
+  .section__card-container .section__card {
+    flex-direction: row;
+  }
+}
+@media screen and (min-width: 650px) {
+  .section__card-container .section__card {
+    max-width: 80rem;
+    justify-content: space-between;
+    gap: 2rem;
+  }
+}
+@media screen and (min-width: 1240px) {
+  .section__card-container .section__card {
+    padding-block: 6rem 4rem;
+    max-height: 44.5rem;
+    max-width: 100%;
+  }
+}
+.section__card-container .section__card__img {
+  width: 25rem;
+  height: 21.4rem;
+}
+@media screen and (min-width: 650px) {
+  .section__card-container .section__card__img {
+    min-width: 40%;
+  }
+}
+@media screen and (min-width: 1240px) {
+  .section__card-container .section__card__img {
+    width: 42.6rem;
+    height: 32.1rem;
+  }
+}
+@media screen and (min-width: 650px) {
+  .section__card-container .section__card__info {
+    max-width: 48rem;
+    text-align: start;
+  }
+}
+.section__card-container .section__card__title {
+  margin-block: 5rem 2.4rem;
+  color: #00252e;
+}
+@media screen and (min-width: 650px) {
+  .section__card-container .section__card__title {
+    margin-block: 0 3rem;
+  }
+}
+.section__card-container .section__card__text {
+  color: #808d99;
+}
+
+@media screen and (min-width: 650px) {
+  .section__card:nth-child(2n+1) {
+    flex-direction: row-reverse !important;
   }
 }
